# ChangeLog for dev-php/PEAR-Services_Weather
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-Services_Weather/ChangeLog,v 1.9 2005/06/18 10:43:52 hansmi Exp $

  18 Jun 2005; Michael Hanselmann <hansmi@gentoo.org>
  PEAR-Services_Weather-1.3.1.ebuild:
  Stable on ppc.

  06 May 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  PEAR-Services_Weather-1.3.1.ebuild:
  Stable on sparc

  06 Apr 2005; Markus Rothe <corsair@gentoo.org>
  PEAR-Services_Weather-1.3.1.ebuild:
  Stable on ppc64

  27 Mar 2005; Bryan Østergaard <kloeri@gentoo.org>
  PEAR-Services_Weather-1.3.1.ebuild:
  Stable on alpha.

  12 Mar 2005; Sebastian Bergmann <sebastian@gentoo.org>
  PEAR-Services_Weather-1.3.1.ebuild:
  Stable on x86 and amd64, see bug 84525.

  09 Mar 2005; Markus Rothe <corsair@gentoo.org>
  PEAR-Services_Weather-1.3.1.ebuild:
  Added ~ppc64 to KEYWORDS; bug #84525

  09 Mar 2005; Sebastian Bergmann <sebastian@gentoo.org>
  PEAR-Services_Weather-1.3.1.ebuild:
  This package was previously bundled with www-apps/horde-pear. Mark unstable
  for ARCHes that www-apps/horde-pear-r2 is marked stable for.

  19 Feb 2005; Sebastian Bergmann <sebastian@gentoo.org>
  PEAR-Services_Weather-1.3.1.ebuild:
  Mask ~amd64.

*PEAR-Services_Weather-1.3.1 (16 Feb 2005)

  16 Feb 2005; Sebastian Bergmann <sebastian@gentoo.org> +metadata.xml,
  +PEAR-Services_Weather-1.3.1.ebuild:
  Initial ebuild for the Services_Weather PEAR package.
