@@ -1,4 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+MD5 408fb6cdf7534979b79a2e50a7a0d8b6 PEAR-Services_Weather-1.3.2.ebuild 606
 MD5 bff482c9d64275b69da3f8dbd294e822 PEAR-Services_Weather-1.3.1.ebuild 595
+MD5 caf87b15fb1b8f8bde7decbb2fd05437 ChangeLog 1655
 MD5 34b376f52ca199fffb4e52b83169574a metadata.xml 156
-MD5 c2e574644cad226bf14368f6f2c6bdb9 ChangeLog 1494
 MD5 3780be3af60c363031658c9ca8f99864 files/digest-PEAR-Services_Weather-1.3.1 70
+MD5 883bfd8528f96c078a2bd368303e4968 files/digest-PEAR-Services_Weather-1.3.2 70
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.1 (GNU/Linux)
+
+iD8DBQFC23cYaGfFFLhbXWkRAoN+AJ9jIt87dHcxcvHjWL+zAkmZDG9IPgCggqjP
+Ck/VMNrkVb6RKsM79nJWG7c=
+=ngFh
+-----END PGP SIGNATURE-----
