@@ -1,0 +1,1 @@
+MD5 1cbdc5a4bb13bc97cbac62e682fe2980 Services_Weather-1.3.2.tgz 44849
