@@ -1,6 +1,12 @@
 # ChangeLog for dev-php/PEAR-Services_Weather
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-Services_Weather/ChangeLog,v 1.9 2005/06/18 10:43:52 hansmi Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-Services_Weather/ChangeLog,v 1.10 2005/07/18 09:31:22 sebastian Exp $
+
+*PEAR-Services_Weather-1.3.2 (18 Jul 2005)
+
+  18 Jul 2005; Sebastian Bergmann <sebastian@gentoo.org>
+  +PEAR-Services_Weather-1.3.2.ebuild:
+  Version bump.
 
   18 Jun 2005; Michael Hanselmann <hansmi@gentoo.org>
   PEAR-Services_Weather-1.3.1.ebuild:
